--- a/css/cover_themes.css
+++ b/css/cover_themes.css
@@ -6,7 +6,7 @@
 
 @media screen and (min-width: 800px) and (max-width: 1199px) {
     #main {
-        width: auto;
+        width: 98.3%;
     }
 }
 
