--- a/css/cover_themes.css
+++ b/css/cover_themes.css
@@ -45,3 +45,17 @@
     padding: 0 2px;
     border-radius: 4px;
 }
+
+code {
+    margin: 0;
+    background-color: initial;
+    padding: 0;
+    font-size: 14px;
+}
+
+.article-more-link a:hover {
+    background: #1dc897;
+    color: #fff;
+    text-decoration: none;
+    text-shadow: 0 1px #1debb9;
+}
